--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.36.0",
+    "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint-config-prettier": "^8.7.0",
+    "prettier": "^2.8.4",
     "sass": "^1.59.2"
   }
 }
