--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
+    "lodash": "^4.17.21",
     "next": "13.2.4",
     "openai": "^3.2.1",
     "react": "18.2.0",
@@ -21,6 +22,7 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "eslint-config-prettier": "^8.7.0",
