--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-transition-group": "^4.4.5",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
     "lodash": "^4.17.21",
@@ -19,6 +20,7 @@
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
