--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-transition-group": "^4.4.5",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
+    "eventsource-parser": "^1.0.0",
     "lodash": "^4.17.21",
     "next": "13.2.4",
     "openai": "^3.2.1",
