--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-transition-group": "^4.4.5",
+    "@vercel/analytics": "^0.1.11",
     "eslint": "^8.36.0",
     "eslint-config-next": "13.2.4",
     "eventsource-parser": "^1.0.0",
